ci: add test-backend job code
- Docker image
- Code to run unit tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -87,13 +87,23 @@ jobs:
             npm install
             npm run test
 
-#   test-backend:
-#     docker:
-#       # Docker image here
-#     steps:
-#       # Checkout code from git
-#       # Restore from cache
-#       # Your job code here
+  test-backend:
+    docker:
+      # Docker image here
+      - image: circleci/node:13.8.0
+    steps:
+      # Checkout code from git
+      - checkout
+      # Restore from cache
+      - restore_cache:
+          keys: [backend-build]
+      # Your job code here
+      - run:
+          name: Run backend test
+          command: |
+            cd backend
+            npm install
+            npm run test
 
 #   scan-frontend:
 #     docker:
