ci: add job code for scan-frontend

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -105,13 +105,23 @@ jobs:
             npm install
             npm run test
 
-#   scan-frontend:
-#     docker:
-#       # Docker image here
-#     steps:
-#       # Checkout code from git
-#       # Restore from cache
-#       # Your job code here
+  scan-frontend:
+    docker:
+      # Docker image here
+      - image: circleci/node:13.8.0
+    steps:
+      # Checkout code from git
+      - checkout
+      # Restore from cache
+      - restore_cache:
+          keys: [frontend-build]
+      # Your job code here
+      - run:
+          name: Run frontend scan
+          command: |
+            cd frontend
+            npm install
+            npm audit --audit-level=critical
 
 #   scan-backend:
 #     docker:
