--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ version: 2.1
 jobs:
   build-frontend:
     docker:
-      - image: cimg/node:18.4.0
+      - image: circleci/node:13.8.0
     steps:
       - checkout
       - restore_cache:
@@ -53,7 +53,7 @@ jobs:
 
   build-backend:
     docker:
-      - image: cimg/node:18.4.0
+      - image: circleci/node:13.8.0
     steps:
       - checkout
       - restore_cache:
@@ -72,7 +72,7 @@ jobs:
   test-frontend:
     docker:
       # Docker image here
-      - image: cimg/node:18.4.0
+      - image: circleci/node:13.8.0
     steps:
       # Checkout code from git
       - checkout
@@ -90,7 +90,7 @@ jobs:
   test-backend:
     docker:
       # Docker image here
-      - image: cimg/node:18.4.0
+      - image: circleci/node:13.8.0
     steps:
       # Checkout code from git
       - checkout
@@ -108,7 +108,7 @@ jobs:
   scan-frontend:
     docker:
       # Docker image here
-      - image: cimg/node:18.4.0
+      - image: circleci/node:13.8.0
     steps:
       # Checkout code from git
       - checkout
@@ -127,7 +127,7 @@ jobs:
   scan-backend:
     docker:
       # Docker image here
-      - image: cimg/node:18.4.0
+      - image: circleci/node:13.8.0
     steps:
       # Checkout code from git
       - checkout
@@ -141,6 +141,7 @@ jobs:
             cd backend
             npm install
             npm audit fix --audit-level=critical --force
+            npm audit fix --force
             npm audit --audit-level=critical
 
 #   deploy-infrastructure:
