--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -192,7 +192,7 @@ jobs:
             - project/.circleci/ansible/inventory.txt
 
       # Here's where you will add some code to rollback on failure
-      - destroy_environment:
+      - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
 #   configure-infrastructure:
