--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -28,10 +28,12 @@ Resources:
       InstanceType: t2.micro
       SecurityGroups:
         - Ref: InstanceSecurityGroup
-      KeyName: udacity # If you use another key pair name, you should change this value to match.
+      KeyName: udapeople
       # If this ami id is not available for you, you can find another (https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/finding-an-ami.html)
       # Ubuntu 18 or higher works fine
-      ImageId: ami-068663a3c619dd892 
+      # Canonical, Ubuntu, 20.04 LTS, amd64 focal image build on 2022-06-10
+      # Last update: 2022-07-09
+      ImageId: ami-0ddf424f81ddb0720
       Tags:
         - Key: Name
           Value: !Sub backend-${ID}
