--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -238,13 +238,10 @@ jobs:
   run-migrations:
     docker:
       # Docker image here that supports NodeJS
-      - image: circleci/node:13.8.0
+      - image: cimg/node:13.8.0
     steps:
       # Checkout code from git
       - checkout
-      # Restore from cache
-      - restore_cache:
-          keys: [backend-build]
       - run:
           name: Run migrations
           command: |
@@ -254,6 +251,7 @@ jobs:
             npm audit fix --audit-level=critical --force
             npm audit fix --force
             # Run and save the migration output
+            npm run build
             npm run migrations >> migration_status.txt
       - run:
           name: Send migration status to kvdb.io
