--- a/backend/package.json
+++ b/backend/package.json
@@ -38,6 +38,7 @@
     "@nestjs/cqrs": "^6.1.0",
     "@nestjs/jwt": "^6.0.0",
     "@nestjs/passport": "^6.2.0",
+    "@types/eslint": "8.4.3",
     "@nestjs/platform-express": "^6.11.11",
     "@nestjs/swagger": "^3.1.0",
     "@nestjs/typeorm": "^6.3.4",
