--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -243,6 +243,12 @@ jobs:
       # Checkout code from git
       - checkout
       - run:
+        name: Install pip
+        command: sudo apt-get install python-pip python-dev
+      - run:
+        name: Install awscli
+        command: sudo pip install awscli
+      - run:
           name: Run migrations
           command: |
             # Your code here
@@ -252,7 +258,7 @@ jobs:
             npm audit fix --force
             # Run and save the migration output
             npm run build
-            npm run migrations >> migration_status.txt
+            npm run migrations >> migrations_dump.txt
       - run:
           name: Send migration status to kvdb.io
           command: |
