attempt(debug): add echo hints

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -256,11 +256,15 @@ jobs:
           command: |
             # Your code here
             cd backend
+            echo "npm install"
             npm install
+            echo "npm audit fix"
             npm audit fix --audit-level=critical --force
             npm audit fix --force
             # Run and save the migration output
+            echo "npm run build"
             npm run build
+            echo "npm run migrations"
             npm run migrations >> migrations_dump.txt
       - run:
           name: Send migration status to kvdb.io
