--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -397,22 +397,22 @@ jobs:
             apk add --update --no-cache npm
             apk add --update --no-cache aws-cli 
             pip install awscli
-
-      - run:
-          name: Get backend url
-          command: |
-            # your code here
-            export BACKEND_IP=$(aws ec2 describe-instances \
-            --filter "Name=tag:Name,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-            --query "Reservations[*].Instances[*].[PublicIpAddress]" \
-            --output text)
       - run:
           name: Backend smoke test.
           command: |
             # your code here
-            # No errors mean a successful test
+            # Get backend url
+            echo "-------Backend URL-------"
+            export BACKEND_IP=$(aws ec2 describe-instances \
+            --filter "Name=tag:Name,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+            --query "Reservations[*].Instances[*].[PublicIpAddress]" \
+            --output text)
+            echo "${BACKEND_IP}"
+            # Fetch and prepare the BACKEND_IP env var
+            echo "-------Fetch and prepare the BACKEND_IP env var-------"
             export API_URL="http://${BACKEND_IP}:3030"
             echo "${API_URL}"
+            # No errors mean a successful test
             if curl "${API_URL}/api/status" | grep "ok"
             then
                 return 0
@@ -424,7 +424,7 @@ jobs:
           command: |
             # your code here
             # Form the front-end url using the workflow id and your AWS region.
-            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"
+            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-west-2.amazonaws.com/#/employees"
             echo ${URL}
             # Check the front-end to make sure it includes a word or two that proves it is working properly.
             # No errors mean a successful test
