--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -187,12 +187,12 @@ jobs:
                 --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  \
                 --tags project=udapeople
       - run:
-          name: Add the EC2 instance IP to the Ansible inventory
+          name: Add the EC2 instance IP  (BACKEND_IP) to the Ansible inventory
           command: |
             # Your code here
             aws ec2 describe-instances \
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
-              --filters "Name=tag:Name,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --output text >> .circleci/ansible/inventory.txt
 
       - persist_to_workspace:
@@ -326,7 +326,7 @@ jobs:
           command: |
             # your code here
             export BACKEND_IP=$(aws ec2 describe-instances \
-            --filter "Name=tag:Name,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+            --filter "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
             --query "Reservations[*].Instances[*].[PublicIpAddress]" \
             --output text)
             export API_URL="http://${BACKEND_IP}:3030"
@@ -427,7 +427,7 @@ jobs:
             # Get backend url
             echo "-------Backend URL-------"
             export BACKEND_IP=$(aws ec2 describe-instances \
-            --filter "Name=tag:Name,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+            --filter "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
             --query "Reservations[*].Instances[*].[PublicIpAddress]" \
             --output text)
             echo "${BACKEND_IP}"
