attempt(fix): update initialstack and s3 bucket
Fix The specified bucket does not exist

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,6 @@ commands:
             aws cloudformation delete-stack --stack-name udapeople-backend-<<parameters.workflow_id>>
             aws cloudformation delete-stack --stack-name udapeople-frontend-<<parameters.workflow_id>>
             aws s3 rm s3://udapeople-<<parameters.workflow_id>> --recursive
-
 #   revert-migrations:
 #     description: Revert the last migration if successfully run in the current workflow.
 #     parameters:
@@ -90,7 +89,6 @@ jobs:
             cd frontend
             npm install
             npm run test
-
   test-backend:
     docker:
       # Docker image here
@@ -108,7 +106,6 @@ jobs:
             cd backend
             npm install
             npm run test
-
   scan-frontend:
     docker:
       # Docker image here
@@ -127,7 +124,6 @@ jobs:
             npm install
             npm audit fix --force
             npm audit --audit-level=critical
-
   scan-backend:
     docker:
       # Docker image here
@@ -147,7 +143,6 @@ jobs:
             npm audit fix --audit-level=critical --force
             npm audit fix --force
             npm audit --audit-level=critical
-
   deploy-infrastructure:
     docker:
       # Docker image here that supports AWS CLI
@@ -168,7 +163,6 @@ jobs:
                 --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
                 --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  \
                 --tags project=udapeople
-
       - run:
           name: Ensure frontend infrastructure exist
           command: |
@@ -178,14 +172,13 @@ jobs:
                 --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  \
                 --tags project=udapeople
       - run:
-          name: Add the EC2 instance IP  (BACKEND_IP) to the Ansible inventory
+          name: Add the EC2 instance IP to the Ansible inventory
           command: |
             # Your code here
             aws ec2 describe-instances \
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
               --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --output text >> .circleci/ansible/inventory.txt
-
       - persist_to_workspace:
           root: ~/
           paths:
@@ -218,14 +211,12 @@ jobs:
             apk add --update --no-cache ansible
             apk add --update --no-cache aws-cli 
             pip install awscli
-
       - run:
           name: Configure server
           command: |
             # Your code here
             cd .circleci/ansible
             ansible-playbook -i inventory.txt configure-server.yml
-
       - persist_to_workspace:
           root: ~/
           paths:
@@ -270,7 +261,6 @@ jobs:
               # curl -d 'email=your_email_address' https://kvdb.io
               # After running the command above youo'll get a bucket ID xxxxxxxxxxxxxxxxxxxxxx
               # Verify your email ID at your_email_address
-
               # If you are using kvdb.io, generate the bucket ID "xxxxxxxxxxxxxxxxxxxxxx" in your local terminal first
               #REPLACE_WITH_APPLICABLE
               curl https://kvdb.io/HmnnciQC9qtfnJNaBpePv3/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1' 
@@ -302,7 +292,6 @@ jobs:
             apk add --update --no-cache nodejs
             apk add --update --no-cache npm
             apk add --update --no-cache aws-cli
-
       - run:
           name: Get backend url
           command: |
@@ -324,7 +313,6 @@ jobs:
             npm run build
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
-
       # Here's where you will add some code to rollback on failure
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
