attempt(fix): add ENVIRONMENT = production
As per 3-configuration-management

Configure infrastructure

--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -62,6 +62,7 @@
   args:
     chdir: /home/ubuntu/uda_app/dist
   environment:
+    ENVIRONMENT: production
     TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"
     TYPEORM_ENTITIES: "{{ lookup('env', 'TYPEORM_ENTITIES')}}"
     TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST')}}"
