--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -19,15 +19,50 @@
     production: yes
     state: present
 
+- name: "install rsync."
+  become: true
+  connection: local
+  package:
+    name: rsync
+    state: present
+
+- name: "backend binaries copy"
+  become: yes
+  synchronize:
+    src: ../../backend/dist
+    dest: /home/ubuntu/uda_app
+    recursive: true
+- name: "node_modules copy"
+  become: yes
+  synchronize:
+    src: ../../backend/node_modules
+    dest: /home/ubuntu/uda_app
+    recursive: true
+
 - name: "extract the zipped artifact into the EC2 instance"
   become: true
   unarchive:
     src: ~/project/artifact.tar.gz
     dest: /home/ubuntu
 
+- name: "delete all existing running"
+  become: true
+  command: pm2 delete all
+  ignore_errors: true
+
 - name: "start app"
   become: true
-  shell: |
-    npm install
-    pm2 stop default
-    pm2 start npm
+  command: pm2 start -f ./main.js
+  args:
+    chdir: /home/ubuntu/uda_app/dist
+  environment:
+    ENVIRONMENT: production
+    TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"
+    TYPEORM_ENTITIES: "{{ lookup('env', 'TYPEORM_ENTITIES')}}"
+    TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST')}}"
+    TYPEORM_PORT: 5432
+    TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME')}}"
+    TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD')}}"
+    TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE')}}"
+    TYPEORM_MIGRATIONS: "{{ lookup('env', 'TYPEORM_MIGRATIONS')}}"
+    TYPEORM_MIGRATIONS_DIR: "{{ lookup('env', 'TYPEORM_MIGRATIONS_DIR')}}"
