attempt(fix):  display PrevWorkflow
can't open '/root/PrevWorkflowID.txt'

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -515,8 +515,7 @@ jobs:
             export PrevWorkflowID=$(aws cloudformation \
             list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
             --no-paginate --output text)
-            echo $PrevWorkflowID >> PrevWorkflowID.txt
-            cat ~/PrevWorkflowID.txt
+            echo $PrevWorkflowID 
 
             # Change the initial stack name, as applicable to you
             aws cloudformation deploy \
